@@ -43,6 +43,7 @@
 - Fixed rare case of misalignment of the status prompt when other user warnings are shown within the hashcat output
 - Fixed password reassembling for cracked hashes on host for slow hashes in optimized mode that are longer than 32 characters
 - Fixed incorrect maximum password length support for -m 400 in optimized mode (reduced from 55 to 39)
+- Fixed invalid handling of outfile folder entries for -m 22000
 
 ##
 ## Improvements
